--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
             align-items: center;
             height: 100vh;
             margin: 0;
+            background-image: url("https://images.unsplash.com/photo-1606240724602-5b21f896eae8?auto=format&fit=crop&q=80&w=2613&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+            background-size: cover;
         }
 
         #email-button {
